--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@ a:hover{color:rgb(52, 183, 167)  }
             <div class="col-xs-1 "><h3>KELLY</h3></div>
             <div class="col-xs-7 b2 text-right ">
                 <ul class="nav nav-pills l">
-                <li><a href="boot3_home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="services.html">Services</a></li>
