--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ justify-content: space-between;}
         <div class="col-xs-1 b"><h3>KELLY</h3></div>
         <div class="col-xs-7 b2 text-right ">
             <ul class="nav nav-pills l">
-            <li><a href="boot3_home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="services.html">Services</a></li>
