--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@ a:hover{color:rgb(52, 183, 167)  }
     
         </div>
 <div class="col-lg-12 text-center">
-    <ul class="pagination nav a-w ">
+    <ul class="pager nav a-w ">
         <li>ALL</li>
         <li>APP</li>
         <li>CARD</li>
