--- a/portfolio.html
+++ b/portfolio.html
@@ -76,10 +76,10 @@ a:hover{color:rgb(52, 183, 167)  }
         </div>
 <div class="col-lg-12 text-center">
     <ul class="pager nav a-w ">
-        <li>ALL</li>
-        <li>APP</li>
-        <li>CARD</li>
-        <li>WEB</li>
+        <li><a>ALL</a></li>
+        <li><a>APP</a></li>
+        <li><a>CARD</a></li>
+        <li><a>WEB</a></li>
     </ul>
 </div>
 
